horizontal scroll fixed and nocturna-cycle started

--- a/style/style.css
+++ b/style/style.css
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     position: absolute; 
     top: 90px;
-    left: 0;
+    left: 0;    
     background-color: rgba(13, 17, 15, 0.5);
     width: 100%;
     padding: 20px;
@@ -174,7 +174,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 88vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -257,9 +257,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*----- The Nocturnal Cycle -----*/
+#nocturnal-cycle {
+    padding: 40px;
+}
+
+#nocturnal-cycle h1 {
+    font-size: 80px;
+    font-weight: 500;
+}
+
 #nocturnal-cycle h2 {
     font-family: var(--font-title);
-    font-weight: 500;
+    font-weight: 400;
 }
 
 #nocturnal-cycle p {
@@ -269,11 +278,11 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Seu CSS para desktop (telas maiores) */
 #nocturnal-cycle #events-list {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
     gap: 30px;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 40px;
 }
 
